News UAT/force-app/main/default/objects/Creative_Services_Team__c/Creative_Services_Team__c.object-meta.xml
<CustomObject>
    <description>NLM custom object.

MD relationship with Opportunity.</description>
    <label>Creative Services Team</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>CS Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creative Services Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>