News UAT/force-app/main/default/objects/Creative_Services_Team__c/fields/Creative_Services_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Creative_Services_Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creative Services Deliverables</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Campaign__c</field>
            <operation>equals</operation>
            <valueField>Creative_Services_Deliverables__c.Campaign__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Creative_Services_Deliverables__c</referenceTo>
    <relationshipLabel>Creative Services Team</relationshipLabel>
    <relationshipName>Creative_Services_Team</relationshipName>
    <type>Lookup</type>
</CustomField>