News UAT/force-app/main/default/objects/Creative_Services_Team__c/fields/Deliverable_Name__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Name__c</fullName>
    <formula>TEXT(Creative_Services_Deliverable__r.Deliverable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deliverable Name</label>
    <type>Text</type>
</CustomField>