News UAT/force-app/main/default/objects/Creative_Services_Team__c/fields/Deliverable_Status__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Status__c</fullName>
    <label>Deliverable Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>