News UAT/force-app/main/default/objects/Creative_Services_Team__c/fields/Estimated_hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_hours__c</fullName>
    <label>Estimated hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>