News UAT/force-app/main/default/objects/Creative_Services_Team__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Creative_Services_Team</relationshipName>
    <type>Lookup</type>
</CustomField>